--- a/src/App.css
+++ b/src/App.css
@@ -1,15 +1,16 @@
 .main {
   padding-left: 20px;
-  padding-top: 20px;
-  position: relative;
+  padding-top: 40px;
+  margin-left: 250px;
 }
 
 #navbar{
   height:100%;
-  position: absolute;
   padding-right: 20px;
   margin-right: 20px;
-  float: left;
+  position: fixed;
+  padding-top: 20px;
+  padding-left: 20px;
 }
 
 #heading{
