--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,11 @@
   text-align: center;
 }
 
+#about-name{
+  color: black;
+  font-weight: 900;
+}
+
 #about-description{
   color: #464242;
   font-family: 'Montserrat', sans-serif;
@@ -9,6 +14,20 @@
   font-size: 40px;
 }
 
+/*#contact{
+  padding: 20px;
+  background-color: #FFFFFF;
+  width: 50%;
+  border-radius: 5px;
+  border-style: solid;
+  border-color: black;
+  text-align: left;
+}*/
+
+#contact-headline{
+  font-size: 60px;
+  font-family: 'Montserrat', sans-serif;
+}
 
 #about-tagline{
   color: #FFFFFF;
@@ -16,8 +35,9 @@
   font-size: 70px;
   font-weight: 900;
   width: 550px;
+  text-align: center;
+  margin: auto;
 }
-
 
 
 .menu-item{
@@ -26,6 +46,9 @@
 
 #about-item{
   color: #2F3234;
+  border-right: 10px solid #0EBBEE;
+  margin-bottom: 15px;
+  margin-top: 30px;
 }
 
 #about-item:hover{
@@ -38,6 +61,14 @@
   transform: translateY(4px);
 }
 
+
+#resume-item{
+  color: #2F3234;
+  border-right: 10px solid #FF2861;
+  margin-bottom: 15px;
+  margin-top: 15px;
+}
+
 #resume-item:hover{
   color: #FFFFFF;
   background-color: #FF2861
@@ -48,6 +79,12 @@
   transform: translateY(4px);
 }
 
+
+#projects-item{
+  color: #2F3234;
+  border-right: 10px solid #2895FF;
+}
+
 #projects-item:hover{
   color: #FFFFFF;
   background-color: #2895FF
@@ -56,6 +93,13 @@
 #projects-item:active{
   box-shadow: 0 5px #666;
   transform: translateY(4px);
+}
+
+#contact-item{
+  color: #2F3234;
+  border-right: 10px solid #48C5A3;
+  margin-bottom: 15px;
+  margin-top: 15px;
 }
 
 #contact-item:hover{
@@ -82,22 +126,26 @@
 }
 
 #logo{
-  width: 30%;
+  width: 80%;
   text-align: center;
-  margin: auto;
+  margin-left: 40px;
+  margin-right: auto;
+  margin-top: 30px;
 }
 
 .main {
   padding-left: 20px;
   padding-top: 40px;
-  float: right;
-  margin-left: 220px;
+  margin-left: 265px;
   width: 100%;
   height: 100%;
   position: fixed;
   background-color: #FFC80B;
-  justify-content: center;
+  justify-content: center !important;
+  text-align: center !important;
   align-items: center;
+  border-radius: 5px;
+  box-shadow: 4px 2px #916f00 !important;
 }
 
 .navbar{
@@ -106,11 +154,16 @@
   position: fixed;
   padding-top: 20px;
   padding-left: 20px;
-  box-shadow: 10px 10px grey !important;
+  box-shadow: 4px 2px #adaa9f!important;
+  width: 260px !important;
 }
 
 
 #project-list{
   display: flex;
   text-align: center;
+}
+
+#app{
+  display:flex;
 }
