--- a/src/App.css
+++ b/src/App.css
@@ -134,36 +134,31 @@
 }
 
 .main {
-  padding-left: 20px;
-  padding-top: 40px;
-  margin-left: 265px;
-  width: 100%;
-  height: 100%;
-  position: fixed;
+  flex: 0;
   background-color: #FFC80B;
-  justify-content: center !important;
-  text-align: center !important;
-  align-items: center;
   border-radius: 5px;
   box-shadow: 4px 2px #916f00 !important;
+  height: 100% !important;
+  margin-left: 20%;
+  flex-direction: column;
 }
 
 .navbar{
-  height:100%;
-  padding-right: 20px;
+  order: -1;
+  width: 20% !important;
   position: fixed;
+  height: 100%;
+  padding-right: 20px;
   padding-top: 20px;
   padding-left: 20px;
   box-shadow: 4px 2px #adaa9f!important;
-  width: 260px !important;
 }
-
 
 #project-list{
   display: flex;
-  text-align: center;
 }
 
 #app{
-  display:flex;
+  height: 100vh;
+  background-color: yellow;
 }
